Reworked DB logic, added group teachers list
