# common/models/response_models.go
@@ -1,9 +1,0 @@
-package models
-
-type ResponseBase struct {
-	Result  bool        `json:"result"`
-	Data    interface{} `json:"data"`
-	Message string      `json:"message"`
-}
-
-
