# docs/swagger.json
@@ -47,13 +47,61 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/teachers.TeacherEvalResponse"
+                                            "$ref": "#/definitions/responses.TeacherEvalResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/teachers/group/{group_name}": {
+            "get": {
+                "description": "Get group teachers list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "teachers"
+                ],
+                "summary": "Get group teachers list",
+                "operationId": "get-group-teachers",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Name group_name",
+                        "name": "group_name",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/responses.ResponseBase"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/responses.TeachersResponse"
+                                            }
                                         }
                                     }
                                 }
@@ -84,7 +132,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/teachers.TeacherMarkBody"
+                            "$ref": "#/definitions/responses.TeacherMarkBody"
                         }
                     }
                 ],
@@ -94,13 +142,13 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/teachers.TeacherMarkBody"
+                                            "type": "string"
                                         }
                                     }
                                 }
@@ -138,7 +186,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
@@ -146,7 +194,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/teachers.TeachersResponse"
+                                                "$ref": "#/definitions/responses.TeachersResponse"
                                             }
                                         }
                                     }
@@ -177,7 +225,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
@@ -185,7 +233,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/timetable.GroupResponse"
+                                                "$ref": "#/definitions/responses.GroupResponse"
                                             }
                                         }
                                     }
@@ -225,7 +273,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
@@ -233,7 +281,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/timetable.SessionResponse"
+                                                "$ref": "#/definitions/responses.SessionResponse"
                                             }
                                         }
                                     }
@@ -280,7 +328,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
@@ -288,7 +336,7 @@
                                         "data": {
                                             "type": "array",
                                             "items": {
-                                                "$ref": "#/definitions/timetable.TimetableResponse"
+                                                "$ref": "#/definitions/responses.TimetableResponse"
                                             }
                                         }
                                     }
@@ -328,7 +376,7 @@
                         "schema": {
                             "allOf": [
                                 {
-                                    "$ref": "#/definitions/models.ResponseBase"
+                                    "$ref": "#/definitions/responses.ResponseBase"
                                 },
                                 {
                                     "type": "object",
@@ -349,70 +397,18 @@
         }
     },
     "definitions": {
-        "models.ResponseBase": {
-            "type": "object",
-            "properties": {
-                "data": {},
-                "message": {
-                    "type": "string"
-                },
-                "result": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "teachers.TeacherEvalResponse": {
-            "type": "object",
-            "properties": {
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "count": {
-                    "type": "integer"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "mark": {
-                    "type": "number"
-                }
-            }
-        },
-        "teachers.TeacherMarkBody": {
+        "responses.Evaluation": {
             "type": "object",
             "properties": {
                 "comment": {
                     "type": "string"
                 },
                 "mark": {
-                    "type": "integer"
-                },
-                "sid": {
-                    "type": "integer"
+                    "type": "number"
                 }
             }
         },
-        "teachers.TeachersResponse": {
-            "type": "object",
-            "properties": {
-                "department": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "position": {
-                    "type": "string"
-                }
-            }
-        },
-        "timetable.GroupResponse": {
+        "responses.GroupResponse": {
             "type": "object",
             "properties": {
                 "direction": {
@@ -429,7 +425,7 @@
                 }
             }
         },
-        "timetable.GroupSubject": {
+        "responses.GroupSubject": {
             "type": "object",
             "properties": {
                 "location": {
@@ -449,7 +445,19 @@
                 }
             }
         },
-        "timetable.SessionResponse": {
+        "responses.ResponseBase": {
+            "type": "object",
+            "properties": {
+                "data": {},
+                "message": {
+                    "type": "string"
+                },
+                "result": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "responses.SessionResponse": {
             "type": "object",
             "properties": {
                 "addition": {
@@ -464,12 +472,12 @@
                 "table": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/timetable.SessionSubject"
+                        "$ref": "#/definitions/responses.SessionSubject"
                     }
                 }
             }
         },
-        "timetable.SessionSubject": {
+        "responses.SessionSubject": {
             "type": "object",
             "properties": {
                 "date": {
@@ -489,7 +497,58 @@
                 }
             }
         },
-        "timetable.TimetableResponse": {
+        "responses.TeacherEvalResponse": {
+            "type": "object",
+            "properties": {
+                "average_mark": {
+                    "type": "number"
+                },
+                "count": {
+                    "type": "integer"
+                },
+                "evaluations": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/responses.Evaluation"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "responses.TeacherMarkBody": {
+            "type": "object",
+            "properties": {
+                "comment": {
+                    "type": "string"
+                },
+                "mark": {
+                    "type": "integer"
+                },
+                "sid": {
+                    "type": "integer"
+                }
+            }
+        },
+        "responses.TeachersResponse": {
+            "type": "object",
+            "properties": {
+                "department": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "position": {
+                    "type": "string"
+                }
+            }
+        },
+        "responses.TimetableResponse": {
             "type": "object",
             "properties": {
                 "day": {
@@ -504,7 +563,7 @@
                 "table": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/timetable.GroupSubject"
+                        "$ref": "#/definitions/responses.GroupSubject"
                     }
                 },
                 "week_num": {
