# pkg/timetable/get_table_types.go
@@ -4,7 +4,6 @@ import (
 	"net/url"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/leenzstra/timetable_server/common/models"
 	"github.com/leenzstra/timetable_server/common/utils"
 )
 
@@ -16,17 +15,15 @@ import (
 // @Param group_name  path string true "Group Name"
 // @Accept       json
 // @Produce      json
-// @Success      200  {object} models.ResponseBase{data=[]string}
+// @Success      200  {object} responses.ResponseBase{data=[]string}
 // @Router       /timetable/types/{group_name} [get]
 func (h handler) GetTimetableTypes(c *fiber.Ctx) error {
-	var groupTypes []*models.Group
-
 	groupName, err := url.QueryUnescape(c.Params("group_name"))
 	if err != nil {
 		return c.JSON(utils.WrapResponse(false, err.Error(), nil))
 	}
 
-	err = h.DB.Where(&models.Group{GroupName: groupName}).Find(&groupTypes).Error
+	groupTypes, err := h.DB.GetGroupTimetableTypes(groupName)
 	if err != nil {
 		return c.JSON(utils.WrapResponse(false, err.Error(), nil))
 	}
